# MVWrapper

./: .gitignore  CMakeLists.txt  README.md  gemalto.ixx  mv.ixx  mvs.ixx  superdog.py
cmake/: FindMVS.cmake  cxx_module.cmake
gemalto/: CMakeLists.txt  gemalto.cppm  gemalto.ixx  main.cpp  superdog.py  vendor_code.py
gemalto/include/gemalto/: superdog.hpp
gemalto/src/exe/: superdog.cpp
gemalto/src/lib/: superdog.cpp
mvs/: CMakeLists.txt  mvs.ixx
ocr/: CMakeLists.txt  main.cpp  ocr.ixx
